--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ env:
   - VERSION=2.7.9
 
 before_install:
+  - sudo apt-get update -qq
   - sudo apt-get install -y wine
   - wget 'https://www.python.org/ftp/python/2.7.9/python-2.7.9.msi'
   - wine msiexec /i python-2.7.9.msi /qn
