--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -y wine
   - wget 'https://www.python.org/ftp/python/2.7.9/python-2.7.9.amd64.msi'
-  - wine msiexec /i python-2.7.9.msi /qn
+  - wine msiexec /i python-2.7.9.amd64.msi /qn
 
 install:
 # increase number of open files allowed for tests
