--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ env:
 before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -y wine
-  - wget 'https://www.python.org/ftp/python/2.7.9/python-2.7.9.amd64.msi'
-  - wine msiexec /i python-2.7.9.amd64.msi /qn
+  - wget 'http://www.python.org/ftp/python/3.3.5/python-3.3.5.msi'
+  - wine msiexec /i python-3.3.5.msi /qn
 
 install:
 # increase number of open files allowed for tests
